Fix tooltip overlapping in some situations

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -6,5 +6,10 @@
   position: sticky;
   top: 1rem;
   background: white;
+  z-index: 2;
+}
+
+.albums {
+  position: relative;
   z-index: 1;
 }
